[project]
name = "hospital-booking-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai==1.98.0",
    "openai-agents>=0.2.5",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]
